[package]
name = "symjit-bridge"
version = "2.13.1"
edition = "2021"
authors = ["Shahriar Iravanian <siravan@svtsim.com>"]
license = "MIT"
readme = "README.md"
description = "a bridge bwtween Symjit compiler and Symbolica CAS"
repository = "https://github.com/siravan/symjit-bridge"
keywords = ["compiler", "JIT", "computer-algebra"]
categories = ["compilers", "hardware-support", "mathematics"]

[dependencies]
anyhow = "1"
num-complex = "0.4.6"
symbolica = { version = "1.3" }
# symjit = { version = "2.13.0" }
symjit = { path = "../symjit-crate" }
wide = "0.8"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "symjit_bridge"
path = "src/bin.rs"
