[package]
name = "symjit-bridge"
version = "2.14.1"
edition = "2021"
authors = ["Shahriar Iravanian <siravan@svtsim.com>"]
license = "MIT"
readme = "README.md"
description = "a bridge bwtween Symjit compiler and Symbolica CAS"
repository = "https://github.com/siravan/symjit-bridge"
keywords = ["compiler", "JIT", "computer-algebra"]
categories = ["compilers", "hardware-support", "mathematics"]

[dependencies]
anyhow = "1"
symbolica = { version = "1.3" }
symjit = { version = "2.14.1" }
# symjit = { path = "../symjit-crate" }
wide = "1.1"
rand = "0.10"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "test"
path = "src/bin.rs"

[[bin]]
name = "string_real"
path = "src/test_real.rs"

[[bin]]
name = "string_complex"
path = "src/test_complex.rs"
